src/styles.less
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
.contentPane {
    padding-left: 2em;
    padding-right: 2em;
}
.breaker {
    margin-top: 2em;
}
.mat-progress-spinner circle, .mat-spinner circle {
    stroke: #ffffff;
    }

